Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14905

lfsck linkEA handling failure on overflow

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      in case of linkea overflow, lfsck reports errors about inability of handling a missed link on each run. at the same time in the recovery mode, lfsck reports it is resolved.
      as this is an expected behaviour and cannot be fixed, lfsck reporting is to be fixed.

      00100000:10000000:2.0:1587666300.307755:0:3427:0:(lfsck_namespace.c:5754:lfsck_namespace_assistant_handler_p1()) snx11281-MDT0000-osd: namespace LFSCK assistant fail to handle the entry: [0x2002f748c:0x8e72:0x0], parent [0x2002f748c:0x8e71:0x0], name lkfile_10213737: rc = -2
      

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: